<resources>
    <string name="app_name">Reevuu Coach</string>
    <string name="internet">Internet connection not available!</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="enter_password">Please enter valid password</string>
    <string name="error_password">Password must have minimum 8 characters</string>
    <string name="error_name">Please enter Name with minimum 2 characters.</string>
    <string name="error_terms">Please agree to terms and conditions.</string>
    <string name="error_sport_played">Please select Sports played</string>
    <string name="error_sport_experience">Please select experience</string>
    <string name="error_sport_college">Please specify whether you played in college or not</string>
    <string name="error_sport_highest">Please select played sport highest level</string>
    <string name="error_level_coached">Please select coached highest level</string>
    <string name="error_coaching_experience">Please select coaching experience</string>
    <string name="error_expertise">Please select your area of expertise</string>
    <string name="error_enter_about">Please write about you</string>
    <string name="error_coaching_certificate">Please add at least one coaching certificate</string>
    <string name="error_profile_pic">Please add profile pic</string>
    <string name="error_user_name">Please add user name</string>
    <string name="error_country_code">Please select country code</string>
    <string name="error_phone_number">Please enter phone number</string>
    <string name="error_coach_gender">Please select gender</string>
    <string name="error_contractor_form">Please add contractor form</string>
    <string name="error_routing">Please enter Routing Number.</string>
    <string name="error_first_name">Please enter First Name.</string>
    <string name="error_last_name">Please enter Last Name.</string>
    <string name="error_account_no">Please enter Account Number.</string>
    <string name="error_address">Please enter Address.</string>
    <string name="error_city">Please enter City.</string>
    <string name="error_state">Please enter State.</string>
    <string name="error_postal_code">Please enter Postal Code.</string>
    <string name="error_dob">Please enter DOB.</string>
    <string name="error_ssn">Please enter SSN.</string>
    <string name="error_internet">Internet connection not available!</string>
    <string name="error_document">Please upload a document for verification.</string>
    <string name="location_permission">Enable Location permission</string>
    <string name="enable">ENABLE</string>
    <string name="error">Something went wrong!</string>
    <string name="success">200</string>
    <string name="invalid_access_token">420</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_my_reevuu">Welcome to my Reevuu</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>
    <string name="name">Name</string>
    <string name="enter">Enter</string>
    <string name="signup">Sign Up</string>
    <string name="by_signing_up_with_the_app_you_agree_to_our_terms_amp_privacy_policy"><![CDATA[By signing up with the app, you agree to our Terms & privacy policy.]]></string>
    <string name="already_registered">Already Registered?</string>
    <string name="signin">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_your_registered_email_id_we_will_send_you_a_link_to_reset_your_password">Enter your registered email id. We will send you a link to reset your password.</string>
    <string name="reset">Reset</string>
    <string name="verify_email">Verify Email</string>
    <string name="resend_email">Resend Email</string>
    <string name="register_as_a_coach">Register As a Coach</string>
    <string name="to_register_yourself_as_coach_please_fill_the_below_details_and_get_approval_from_admin">To register yourself as coach please fill the below details and get approval from admin.</string>
    <string name="sport_info">Sport Info</string>
    <string name="coach_info">Coach Info</string>
    <string name="sports_played">Sports Played</string>
    <string name="select">Select</string>
    <string name="playing_experience_in_years">Playing Experience (In years)</string>
    <string name="did_you_play_sports_in_college">Did you play sports in college?</string>
    <string name="highest_level_you_completed_in">Highest level you completed In</string>
    <string name="submit">Submit</string>
    <string name="highest_level_you_coached_in">Highest level you coached in</string>
    <string name="years_coaching_experience">Years of Coaching Experience</string>
    <string name="about_you">About You</string>
    <string name="select_coaching_certificate">Select Any Coaching Certifications / Courses.</string>
    <string name="write_here">Write here...</string>
    <string name="done">Done</string>
    <string name="choose_certificate">Choose Certificate</string>
    <string name="add_more">add more</string>
    <string name="other_certificate">Other Certificate</string>
    <string name="area_of_expertise">Area of Expertise</string>
    <string name="your_request_for_coach_has_been_submitted_successfully_this_will_take_some_time_to_verification">We will email you as soon as you have been vetted by the ReeVuu team and verified as a coach. Thanks!</string>
    <string name="ok">OK</string>
    <string name="create_profile">Create Profile</string>
    <string name="personal_info">Personal Info</string>
    <string name="user_name">User Name</string>
    <string name="enter_name">Enter name</string>
    <string name="phone_no">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="provide_email_contacts_for_athletes_optional">Provide email contacts for Athletes (Optional)</string>
    <string name="take_a_photo">Take A Photo</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="view_photo">View Photo</string>
    <string name="cancel">CANCEL</string>
    <string name="select_gender">Select Gender</string>
    <string name="transition_image">transition_image</string>
    <string name="routing_number">Routing Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="account_number">Account Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Postal Code</string>
    <string name="SSN">SSN</string>
    <string name="dob">DOB</string>
    <string name="document">Document</string>
    <string name="select_document">Select Document</string>
    <string name="no_files_found">No Files Found</string>
    <string name="permission_filepicker_rationale">Storage permission is needed to access files.</string>
    <string name="upload_1099_independent_contractor_form">Upload 1099 Independent Contractor Form</string>
    <string name="tap_to_add">Tap to add</string>
    <string name="error_max_email">Can\'t enter more than five Email ids</string>
    <string name="available">Available</string>
    <string name="not_available">Not Available</string>
    <string name="popup_window_text">We ask to provide this to help you start building our business. These atheletes can now specifically request you to review their video.</string>
    <string name="view_document">View Document</string>
    <string name="edit_document">Edit Document</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="review">Review</string>
    <string name="chat">Chat</string>
    <string name="upload_and_submit_video_a_video_for_review">Upload and submit video a video for Review</string>
    <string name="use_this_button_to_upload_videos_of_training_sessions_and_other_content_atheletes_may_find_interesting_atheletes_will_specifically_request_you_to_review_their_video_for_what_you_post">Use this button to upload videos of training sessions and other content atheletes may find interesting. Atheletes will specifically request you to review their video for what you post!.</string>
    <string name="got_it">Got It</string>
    <string name="work_progress">Work in Progress.</string>
    <string name="report_video">Report Video</string>
    <string name="sure_logout">Are you sure you want to Logout?</string>
    <string name="logout">Logout</string>
    <string name="ssn_hint">Enter Last 4 Digits</string>
    <string name="athletes_will_specifically_request_you_to_review_their_video_based_off_of_what_you_post">Use this button to upload videos of training sessions and other content atheletes may find interesting. Athletes will specifically request you to review their video based off of what you post!</string>
    <string name="about_you_bio">About You / Bio</string>
    <string name="how_big_is_your_team_invite_athletes_and_help_them_reach_their_full_potential_by_the_way_this_is_a_competition_so_the_more_you_invite_the_better_your_chance_to_win_xyz_and_bragging_rights">How big is your team, invite athletes and help them reach their full potential. By the way this is a competition, so the more you invite the better your chance to win XYZ and bragging rights</string>
    <string name="tell_us_all_about_you_here_don_t_hold_back_this_is_where_you_sell_yourself_to_make_sure_athletes_choose_you_to_reevuu_their_videos_brag_brag_brag_please_give_mention_any_athletic_or_coaching_achievements_certifications_or_awards">Tell us about yourself here. What have you accomplished? What areas do you specialize in? Do you have any certifications or awards? This is the place to brag about yourself. Athletes will choose you based on this section so go on and brag a little!</string>
    <string name="CONFIRM">CONFIRM</string>
    <string name="CANCEL">CANCEL</string>
    <string name="payments">PAYMENTS</string>
    <string name="videos">VIDEOS</string>
    <string name="info">INFO</string>
    <string name="add_video_detail">ADD VIDEO DETAIL</string>
    <string name="category">CATEGORY</string>
    <string name="title">TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="upload_video">UPLOAD VIDEO</string>
    <string name="wrong">SOMETHING WENT WRONG</string>
    <string name="please_wait_your_video_is_still_uploading">Please wait, Your video is still uploading.</string>
    <string name="video_is_uploaded_successfully">Video is uploaded successfully</string>
    <string name="compressing_video">Please wait. Compressing video.</string>
    <string name="delete_video">DELETE VIDEO</string>
    <string name="are_you_sure_you_want_to_permanently_delete_thi_video">Are you sure you want to permanently \ndelete thi video?</string>
    <string name="delete">DELETE</string>
    <string name="change_email">Change Email</string>
    <string name="new_email">New email</string>
    <string name="update_email">UPDATE EMAIL</string>
    <string name="existing_email">Existing Email</string>
    <string name="enter_new_email">Enter New Email</string>
    <string name="sign_up_today_to_provide_meaningful_feedback_to_your_athletes_so_they_can_make_rapid_improvements">Sign Up today to provide meaningful feedback to your athletes, so they can make rapid improvements.</string>
</resources>