<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_View"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_5sdp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:foreground="?selectableItemBackground"
            android:padding="@dimen/_10sdp"
            android:src="@mipmap/ic_back_white" />

        <com.myreevuuCoach.customViews.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_email"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="@dimen/_25sdp"
        android:paddingStart="@dimen/_25sdp"
        android:paddingTop="@dimen/_20sdp">


        <com.myreevuuCoach.customViews.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/existing_email"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <com.myreevuuCoach.customViews.RegularTextView
            android:id="@+id/tvEmailExisting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/enter"
            android:textColor="@color/colorGreyLight"
            android:textSize="@dimen/_12ssp" />

        <com.myreevuuCoach.customViews.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/new_email"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"/>


        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_border"
            android:hint="@string/enter_new_email"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/colorGrey"
            android:textSize="@dimen/_12ssp" />


        <com.myreevuuCoach.customViews.BoldTextView
            android:id="@+id/txtDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/primary_ripple_round_corner"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/update_email"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />


    </LinearLayout>


</LinearLayout>