<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llOuterForgot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom">

    <LinearLayout
        android:id="@+id/llForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        android:paddingTop="@dimen/_16sdp"
        android:background="@drawable/white_default"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.myreevuuCoach.customViews.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_14ssp" />

        <com.myreevuuCoach.customViews.RegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_12sdp"
            android:text="@string/enter_your_registered_email_id_we_will_send_you_a_link_to_reset_your_password"
            android:textColor="@color/colorGrey" />

        <com.myreevuuCoach.customViews.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_12sdp"
            android:text="@string/email"
            android:textAllCaps="true"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/_10ssp" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/enter"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:maxLines="1"
            android:paddingBottom="@dimen/_8sdp"
            android:paddingTop="@dimen/_8sdp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textSize="@dimen/_14ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey" />

        <com.myreevuuCoach.customViews.BoldTextView
            android:id="@+id/txtRESET"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/primary_ripple_round_corner"
            android:gravity="center"
            android:text="@string/reset"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14ssp"
            app:textAllCaps="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_12sdp"
            android:background="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>