<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/white_default"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <com.myreevuuCoach.customViews.RegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/write_here"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp" />

    <EditText
        android:id="@+id/edEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/enter"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="320"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingTop="@dimen/_8sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/colorGrey"
        android:textSize="@dimen/_12ssp" />

    <com.myreevuuCoach.customViews.BoldTextView
        android:id="@+id/txtDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/primary_ripple_round_corner"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/done"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12ssp" />

</LinearLayout>